hover for scoll to top button

--- a/style.css
+++ b/style.css
@@ -78,9 +78,14 @@ header {
   border:none;
   border-radius: 50%;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  transition: all 0.6s ease-out;
+  transition: all 0.3s ease-out;
 }
-
 .scroll-to-top span{
   color: #fff;
+}
+.scroll-to-top:hover{
+  background-color: #fff;
+}
+.scroll-to-top:hover span{
+  color: #101d42;
 }
